--- a/heritagetour-es.html
+++ b/heritagetour-es.html
@@ -76,7 +76,7 @@ if (document.selection) {
 
 </head>
 <a name="top"></a>
-<h3><a href="index.html">&#9664 Back to Main Page</a></h3>
+<h3><a href="index.html">&#9664 Tabla de contenido</a></h3>
 <h3><a style="float:right" href="heritagetour-german.html">Deutsch</a></h3><br>
 <h3><a style="float:right" href="heritagetour.html">English</a></h3>
 
@@ -111,7 +111,9 @@ Tour del Patrimonio Europeo en Valparaíso.<br></h1>
 Explorando el Patrimonio Británico y Alemán en Cerro Concepción y Cerro Alegre.</b>
 
 <br>
-
+<br><br><h3>
+Solicita un tour en: <a href ="https://www.tripadvisor.com/AttractionProductDetail-g294306-d17429287-Heritage_Tour_covering_the_monuments_and_buildings_of_the_European_colonies-Valparaiso_Valparaiso_Region.html">TripAdvisor</a><br></h3>
+<br>
 <br>
 
 <br>
@@ -354,27 +356,34 @@ The building has since been sold but can still been visited at Avenida Errázuri
 <br>
 <br>
 
+
+
+
+<br><br><!--
+<a href="https://forms.gle/frCnxUhrPP6CJ3897">Formulario. </a>
+<br><br>-->
+<h3>
+Solicita un tour en:
+
+<a href ="https://www.tripadvisor.com/AttractionProductDetail-g294306-d17429287-Heritage_Tour_covering_the_monuments_and_buildings_of_the_European_colonies-Valparaiso_Valparaiso_Region.html">TripAdvisor</a><br></h3>
 <br>
 Contacto:<br> 
 
 <p id="div1" style="color:grey; text-decoration: underline; <!--display:none;-->">EuropeanHeritageTour@gmail.com </p><button id="button1" onclick="CopyToClipboard('div1')" style="color:grey; text-decoration: underline;">Copiar correo electrónico</button>
-
-
-<br><br>
-<a href="https://forms.gle/frCnxUhrPP6CJ3897">Formulario. </a>
-<br><br>
-Booking:
-<br>
-
-<a href ="https://www.tripadvisor.com/AttractionProductDetail-g294306-d17429287-Heritage_Tour_covering_the_monuments_and_buildings_of_the_European_colonies-Valparaiso_Valparaiso_Region.html">TripAdvisor</a><br>/
-
-<a href ="https://www.viator.com/tours/Valparaiso/Heritage-Tour-covering-the-monuments-and-buildings-of-the-European-colonies/d22148-148196P1">Viator</a>
+<!--
+<a href 
+="https://www.viator.com/tours/Valparaiso/Heritage-Tour-covering-the-monuments-and-buildings-of-the-European-colonies/d22148-148196P1">Viator</a>-->
  <br>
 <br>
+<h5>
+<a href="http://saintpaulchile.cl/?page_id=18">Donaciones</a></h5>
 <br>
 </div></div>
+
+
+
 	<h3 ><a title="Volver" 
-href="index.html">&#9664 Volver a página principal</a></h3>
+href="index.html#1">&#9664 Tabla de contenido</a></h3>
 
 
 
