--- a/heritagetour-german.html
+++ b/heritagetour-german.html
@@ -76,7 +76,7 @@ if (document.selection) {
 
 </head>
 <a name="top"></a>
-<h3><a href="index.html">&#9664 Back to Main Page</a></h3>
+<h3><a href="index.html">&#9664 Table of contents</a></h3>
 <h3><a style="float:right" 
 href="heritagetour.html">English</a></h3><br>
 <h3><a style="float:right" href="heritagetour-es.html">Español</a></h3>
@@ -113,7 +113,9 @@ Entdecken Sie das englische und deutsche Kulturerbe in den Hügeln Cerro Concepc
 
 <br>
 <br>
-
+<br><br><h3>
+Sign up for a guided tour on: <a href ="https://www.tripadvisor.com/AttractionProductDetail-g294306-d17429287-Heritage_Tour_covering_the_monuments_and_buildings_of_the_European_colonies-Valparaiso_Valparaiso_Region.html">TripAdvisor</a><br></h3>
+<br>
 <br>
 <br>
 <br><h3>
@@ -345,26 +347,36 @@ The building has since been sold but can still been visited at Avenida Errázuri
 <br>
 <br>
 
+
+<!--
+<br><br>
+<a href="https://forms.gle/frCnxUhrPP6CJ3897">Form</a>.
+<br><br>--><h3>
+Booking:
 <br>
+
+<a href 
+="https://www.tripadvisor.com/AttractionProductDetail-g294306-d17429287-Heritage_Tour_covering_the_monuments_and_buildings_of_the_European_colonies-Valparaiso_Valparaiso_Region.html">TripAdvisor</a>
+<br></h3>
 Contact:<br> 
 
 <p id="div1" style="color:grey; text-decoration: underline; <!--display:none;-->">EuropeanHeritageTour@gmail.com </p><button id="button1" onclick="CopyToClipboard('div1')" style="color:grey; text-decoration: underline;">Click to Copy Email</button>
 
 
-<br><br>
-<a href="https://forms.gle/frCnxUhrPP6CJ3897">Form</a>.
-<br><br>
-Booking:
-<br>
 
-<a href ="https://www.tripadvisor.com/AttractionProductDetail-g294306-d17429287-Heritage_Tour_covering_the_monuments_and_buildings_of_the_European_colonies-Valparaiso_Valparaiso_Region.html">TripAdvisor</a><br>/
 
-<a href ="https://www.viator.com/tours/Valparaiso/Heritage-Tour-covering-the-monuments-and-buildings-of-the-European-colonies/d22148-148196P1">Viator</a>
+<!--/
+
+<a href 
+="https://www.viator.com/tours/Valparaiso/Heritage-Tour-covering-the-monuments-and-buildings-of-the-European-colonies/d22148-148196P1">Viator</a>-->
  <br>
+<br>
+<h5>
+<a href="http://saintpaulchile.cl/?page_id=1761&lang=en">Donations</a></h5>
 <br>
 <br>
 </div></div>
-<h3><a href="index.html">&#9664 Back to Main Page</a></h3>
+<h3><a href="index.html#1">&#9664 Table of contents</a></h3>
 
 
 
