--- a/heritagetour.html
+++ b/heritagetour.html
@@ -76,7 +76,7 @@ if (document.selection) {
 
 </head>
 <a name="top"></a>
-<h3><a href="index.html">&#9664 Back to Main Page</a></h3>
+<h3><a href="index.html">&#9664 Table of contents</a></h3>
 <h3><a style="float:right" href="heritagetour-german.html">Deutsch</a></h3><br>
 <h3><a style="float:right" href="heritagetour-es.html">Español</a></h3>
 <img src="images/heritage_tour/map.jpg">
@@ -112,7 +112,9 @@ Exploring the British and German Heritage of Cerro Concepción and Cerro Alegre.
 <br>
 Clicking on an address will take you to that location on the google maps website.
 <br>
-
+<br><br><h3>
+Sign up for a guided tour on: <a href ="https://www.tripadvisor.com/AttractionProductDetail-g294306-d17429287-Heritage_Tour_covering_the_monuments_and_buildings_of_the_European_colonies-Valparaiso_Valparaiso_Region.html">TripAdvisor</a><br></h3>
+<br>
 <br>
 <br>
 <br><h3>
@@ -325,27 +327,30 @@ The building has since been sold but can still been visited at Avenida Errázuri
 ">Map</a>
 <br>
 <br>
-
+<br><br><h3>
+Sign up for a guided tour on:
 <br>
- For guided tours contact:<br> 
+
+<a href ="https://www.tripadvisor.com/AttractionProductDetail-g294306-d17429287-Heritage_Tour_covering_the_monuments_and_buildings_of_the_European_colonies-Valparaiso_Valparaiso_Region.html">TripAdvisor</a><br></h3>
+<br>
+Contact:<br> 
 
 <p id="div1" style="color:grey; text-decoration: underline; <!--display:none;-->">EuropeanHeritageTour@gmail.com </p><button id="button1" onclick="CopyToClipboard('div1')" style="color:grey; text-decoration: underline;">Click to Copy Email</button>
-
-
+<br><br>
+<h5>
+<a href="http://saintpaulchile.cl/?page_id=1761&lang=en">Donations</a></h5>
+<br>
+<!--
 <br><br>
 You can also sign up using our <a href="https://forms.gle/frCnxUhrPP6CJ3897">Form</a>.
-<br><br>
-Or book a tour via:
-<br>
+-->
 
-<a href ="https://www.tripadvisor.com/AttractionProductDetail-g294306-d17429287-Heritage_Tour_covering_the_monuments_and_buildings_of_the_European_colonies-Valparaiso_Valparaiso_Region.html">TripAdvisor</a><br>/
-
-<a href ="https://www.viator.com/tours/Valparaiso/Heritage-Tour-covering-the-monuments-and-buildings-of-the-European-colonies/d22148-148196P1">Viator</a>
- <br>
+<!--<a href ="https://www.viator.com/tours/Valparaiso/Heritage-Tour-covering-the-monuments-and-buildings-of-the-European-colonies/d22148-148196P1">Viator</a>
+ --><br>
 <br>
 <br>
 </div></div>
-<h3><a href="index.html">&#9664 Back to Main Page</a></h3>
+<h3><a href="index.html#1">&#9664 Table of contents</a></h3>
 
 
 
