--- a/historical-information.html
+++ b/historical-information.html
@@ -107,7 +107,7 @@
 
 
 <h3><a title="Volver" 
-href="index.html">&#9664 Back to Main Page</a></h3>
+href="index.html">&#9664 Table of contents</a></h3>
 	
 <br><br>
 	
@@ -153,6 +153,7 @@ Many new arrivals in Valparaiso in the nineteenth century were of British and Ge
 
 
  <br>
+
 <br>
 <center>
 <iframe src="https://player.vimeo.com/video/354961087" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
@@ -212,13 +213,15 @@ https://en.wikipedia.org/wiki/Counter-Reformation
 
 ">Counter-Reformation</a>-->
 
-<br><br>
+
 &nbsp;&nbsp;&nbsp;&nbsp;The church was built to be a “beacon on a 
-hill” in 1858, before there was <a href="
+hill” in 1858, before there was 
+
+<a href="
 https://en.wikipedia.org/wiki/Freedom_of_religion
 
 ">religious freedom</a> in Chile. 
-
+<br>
 
 <br>
 <!--
@@ -736,7 +739,7 @@ https://en.wikipedia.org/wiki/Anglicanism
 <div id="outer">  
     <div id="inner">
 <br><br>
-
+<a name="further-reading"></a> 
 <!--<h4><a href="
 https://es.wikipedia.org/wiki/Catedral_anglicana_de_San_Pablo_(Valpara%C3%ADso)
 
@@ -792,6 +795,10 @@ Barros (pdf)
 ">Anglo_Chilean_community_by_L_Derrick-Jehu.pdf</a>
 </center><br>
 <br></li>
+<br><li>
+ <a href="
+ what-is-the-anglican-church.html">What is the Anglican Church?</a>
+</center></li><br>
 
 External links:
 <br>
@@ -846,5 +853,5 @@ Painting by:
 <br>
 </div></div>
 <h3><a title="Volver" 
-href="index.html">&#9664 Back to Main Page</a></h3>
+href="index.html#1">&#9664 Table of contents</a></h3>
 	
