--- a/organ.html
+++ b/organ.html
@@ -49,7 +49,7 @@
 
 		</style>
 		
-<h3><a href="index.html">&#9664 Back to Main Page</a></h3>
+<h3><a href="index.html">&#9664 Table of contents</a></h3>
 		
 		<body>
 			<div id="outer">  
@@ -149,7 +149,7 @@ http://saintpaulchile.cl/?cat=61&lang=en">Musica en las Alturas - Conciertos tod
 <br>
 <h3><a href="historical-information.html#organ">&#9664 Back to Historical Information page</a></h3>
 
-<h3><a href="index.html">&#9664 Back to Main Page</a></h3>
+<h3><a href="index.html">&#9664 Table of contents</a></h3>
 </html>  
 
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
