--- a/historical-information.html
+++ b/historical-information.html
@@ -831,7 +831,16 @@ https://en.wikipedia.org/wiki/English_Reformation">English Reformation</a>
 
 
 		<br>
+		<a href="
+http://cinetecavirtual.uchile.cl/cineteca/index.php/Detail/objects/2357">Documento de obra N°1. Construcción in situ de marcos de madera laminada. (video)</a>
+
+		
+
 <br>
+
+
+		<br>
+
 Photographs by: 
 <br>
 Painting by:
