--- a/heritagetour.html
+++ b/heritagetour.html
@@ -120,7 +120,15 @@ Sign up for a guided tour on: <a href ="https://www.tripadvisor.com/AttractionPr
 <br><h3>
 Calle Prat</h3>
 <a name="1"></a> 
-<b>1. Bank of London: (Santander)</b> <a href="https://goo.gl/maps/JreWpRnacjFdHAu38">(Prat 882)</a>  <br>The bank was founded in 1907, when Valparaíso was the banking centre of the nitrate industry and where all the financial deals were done. These banks left behind some of the best of Valparaíso's architecture, especially in Calle Pratt and Cochrane. The Bank of London, now the Santander Bank, is one of the finest examples, with beautiful woodwork, cornices and mosaic tiles.
+<b>1. Bank of London: (Santander)</b> <a href="https://goo.gl/maps/JreWpRnacjFdHAu38">(Prat 882)</a>  
+<br>
+<audio src="audio-tour/heritage-tour/bank-of-london.ogg" controls>
+ 
+
+</audio>
+
+
+<br>The bank was founded in 1907, when Valparaíso was the banking centre of the nitrate industry and where all the financial deals were done. These banks left behind some of the best of Valparaíso's architecture, especially in Calle Pratt and Cochrane. The Bank of London, now the Santander Bank, is one of the finest examples, with beautiful woodwork, cornices and mosaic tiles.
 <br>
 <br><h1><a style="float: right;" 
 				href="#top" title="Top" >&#9650</a></h1>	
@@ -128,7 +136,12 @@ Calle Prat</h3>
 <br>
 <br>
 <a name="2"></a> 
-<b>2. Bar Inglés 1926: </b>(<a href="https://goo.gl/maps/bwE53wUrZFzEjoF29">857 Cochrane</a> and <a href="https://goo.gl/maps/8hSKN1iUYSW5RmGP9">870 Blanco</a>)  <br> Around 1905 Valparaíso had about 1,150 bars. The Bar Inglés opened only during the working week and was thus directly linked to the commercial and financial life of the city.
+<b>2. Bar Inglés 1926: </b>(<a href="https://goo.gl/maps/bwE53wUrZFzEjoF29">857 Cochrane</a> and <a href="https://goo.gl/maps/8hSKN1iUYSW5RmGP9">870 Blanco</a>)  
+<br>
+
+<audio src="audio-tour/heritage-tour/bar-ingles.ogg" controls></audio>
+
+<br> Around 1905 Valparaíso had about 1,150 bars. The Bar Inglés opened only during the working week and was thus directly linked to the commercial and financial life of the city.
 It has retained all of its original furniture and fittings thanks to the loyalty of its clients, who despite a close down sale ensured that everything was left in place.
 
 
@@ -142,6 +155,10 @@ It has retained all of its original furniture and fittings thanks to the loyalty
 
 <a href="https://goo.gl/maps/8yoQimM2gyhCxvMR9">(Esmeralda 916)</a>
 <br>
+
+<audio src="audio-tour/heritage-tour/german-bank.ogg" controls></audio>
+
+<br>
 Built in 1912 in Esmeralda 916, 
 the German Transatlantic Bank was established in 1896 and opened branches
 in Concepción, Temuco, Valdivia, Antofagasta and Iquique. 
@@ -154,10 +171,14 @@ By 1910 the three German banks in Valparaíso represented more than
 <br>
 <b><a href="https://es.wikipedia.org/wiki/El_Mercurio_de_Valpara%C3%ADso"> El Mercurio Founded in 1827 </a></b> <a href="https://goo.gl/maps/iB2Uhyezxyg8xGpVA">(Esmeralda 1002)</a>
 <br>
+
+<audio src="audio-tour/heritage-tour/el-mercurio.ogg" controls></audio>
+
+<br>
 This was the first newspaper in South America.
 It was sold to the Edwards family in 1875 in payment of a debt and became
 a daily, distributed in both Valparaíso and Santiago. 
-Runnning along the side of the building are the steps that take you to Paseo
+Running along the side of the building are the steps that take you to Paseo
 Atkinson. These were known to the locals as La Subida Escoses – the Scottish
 Steps as the canny Scots refused to pay to descend to their businesses on 
 The ‘Ascensor’.
@@ -174,6 +195,9 @@ Monument to Chile’s naval heroes of the War of Independence.
 <br>
 <a name="4"></a> 
 <b>4. Garland 11th Fire Company 1851.</b><a href="https://goo.gl/maps/cKHGT7uH3SGc496T9"> (Melgarejo 210)</a> <br> 
+<audio src="audio-tour/heritage-tour/garland.ogg" controls></audio>
+
+<br>
  Founded as the 1st company, along with the German fire company, it combined with the 11th company and became known as “The George Garland”.
 George Garland himself played an important part in the life of the city. As an enthusiastic sportsman and benefactor he dedicated himself to the wellbeing of the young, founding recreational clubs and societies. Amongst them the Valparaíso Sporting Club, the Cricket club and the Foxhunting club. 
 <br>
@@ -187,10 +211,18 @@ George Garland himself played an important part in the life of the city. As an e
 Across Calle Blanco from the Fire Station you will see an impressive monument.<br>
 <br>
 <a name="5"></a> 
-<b>5. La Patria y sus Héroes.</b> <br> This monument commemorates naval battles in the war of independence from Spain. It is surmounted by a statue of Vice-admiral Manuel Blanco Encalada (1790 – 1876). One plaque depicts Blanco Encalada, commander of the first naval squadron, handing over the squadron to Lord Cochrane on 23 December 1818.
+<b>5. La Patria y sus Héroes.</b> <br>
+<audio src="audio-tour/heritage-tour/patria-heroes.ogg" controls></audio>
+
+<br>
+ This monument commemorates naval battles in the war of independence from Spain. It is surmounted by a statue of Vice-admiral Manuel Blanco Encalada (1790 – 1876). One plaque depicts Blanco Encalada, commander of the first naval squadron, handing over the squadron to Lord Cochrane on 23 December 1818.
 From the fire Station, follow AV. Brasil until you reach Bellavista. Cross it and you will find the monument to Lord Cochrane.
 <br>
-<b><a href="https://es.wikipedia.org/wiki/Monumento_a_Lord_Cochrane">Lord Cochrane Monument.</a></b>  <a href="https://goo.gl/maps/47gfGTZXkTcEP8go6">(Bellavista 410)<br></a>Lord Cochrane is revered in Chile for his role in the war of independence against Spain. His exploits during the Napoleonic wars were the inspiration for the novels of Jack Aubrey and given Hollywood treatment in the film Master and Commander. With Spain’s colonies in revolt, he was hired by Bernardo O’Higgins, Chile’s first President to lead the fledging Chilean navy. His greatest successes were the capture of the Spanish warship Esmeralda and in 1820 the attack on Valdivia, Spain’s most important base in Chile, which broke the Spanish Army.
+<b><a href="https://es.wikipedia.org/wiki/Monumento_a_Lord_Cochrane">Lord Cochrane Monument.</a></b>  <a href="https://goo.gl/maps/47gfGTZXkTcEP8go6">(Bellavista 410)<br></a>
+
+<audio src="audio-tour/heritage-tour/lord-cochrane.ogg" controls></audio>
+<br>
+Lord Cochrane is revered in Chile for his role in the war of independence against Spain. His exploits during the Napoleonic wars were the inspiration for the novels of Jack Aubrey and given Hollywood treatment in the film Master and Commander. With Spain’s colonies in revolt, he was hired by Bernardo O’Higgins, Chile’s first President to lead the fledging Chilean navy. His greatest successes were the capture of the Spanish warship Esmeralda and in 1820 the attack on Valdivia, Spain’s most important base in Chile, which broke the Spanish Army.
 If you have a moment pop into the Hamburgo Restaurant where visiting seamen have left many momentos of the travels.
 From the monument continue along Av. Brasil until you reach Eleuterio Ramirez 
 where you will see the Arco Britanico.
@@ -202,7 +234,9 @@ where you will see the Arco Britanico.
 <br>
 <a name="6"></a> 
 <b>6. Arco Britanico</b><a href="https://goo.gl/maps/EXGwHkpMH3YguiDG6
-"> (1559,, Brasil 1509)</a> <br>
+"> (1559, Brasil 1509)</a> <br>
+<audio src="audio-tour/heritage-tour/arco-britanico.ogg" controls></audio>
+<br>
 This monument was donated to the city of Valparaíso in 1911 to celebrate the 100 anniversary of Chilean independence. The wealth and influence of the British community in Valparaíso is reflected in the Carrara Marble and bronze used in its construction. It has a bust in bronze of 4 people of British heritage, who fought for Chile during the war of independence: Cochrane, O’Higgins, O’Brien and Simpson. Queen Elizabeth II visited the arch during her trip to Chile in 1968.
 Crossing from the Arch towards Salvador Donoso you will see A large White building recently renovated. This is the German club.
 <br>
@@ -213,6 +247,8 @@ Crossing from the Arch towards Salvador Donoso you will see A large White buildi
 <a name="7"></a> 
 <b>7. Club Alemán de Valparaíso.</b> <a href="https://goo.gl/maps/Jcnm2GNKgZYKe4cn7
 "> (Salvador Donoso 1337)</a> <br>
+<audio src="audio-tour/heritage-tour/club-aleman.ogg" controls></audio>
+<br>
 The Club Alemán was founded in 1838 and is the oldest of its type in South America. It was created by 27 young Germans as a place to read, make music and create theatre. In a short time it established itself as a social and cultural centre, offering to the Porteño society a variety of activities, brought to them by the best artists of the region. In 1976 the Palacio Ross building was declared a historic monument and in 2013 the Club Aleman was nominated as a part of Valparaíso’s cultural heritage, bearing testimony to the close links of friendship and interchange that have existed between the communities.
 
 <br>
@@ -226,7 +262,9 @@ Cerro Panteón </h3>
 <a href="https://goo.gl/maps/qrJTaz1LBnDSxayZ6
 "> (Dinamarca 539-399)</a><br>
 <br>
-<b>Ascensor Panteon</b>
+<b>Ascensor Panteon</b><br>
+<audio src="audio-tour/heritage-tour/ascensor-panteon.ogg" controls></audio>
+<br>
 From 1901 to 1952 there was an “ascensor” (Ascensor Panteon) from Avenida Ecuador to calle Dinamarca. It was built by the British company, Balfour-Lyon. Initially it was water powered, but by 1910 a steam engine was used and finally an electric motor. There were several accidents; one being on 7th February 1909 when the operator was drunk, one person died and two were seriously injured. The upper station remains but is hard to identify.
 <br>
 <br><h1><a style="float: right;" 
@@ -236,9 +274,11 @@ From 1901 to 1952 there was an “ascensor” (Ascensor Panteon) from Avenida Ec
 <br>
 <br>
 <a name="8"></a> 
-<b>8. Cementerio de Dissidentes</b> <a href="https://goo.gl/maps/KQUG2UiDGxsq3bL3A
+<b>8. Cementerio de Disidentes</b> <a href="https://goo.gl/maps/KQUG2UiDGxsq3bL3A
 "> (Dinamarca 217)</a><br>
-Until 1825 non-Catholics were not permitted to be buried in any cemetery and were instead interred on the hillsides or seashore, sometimes even in caves.  However, in 1819 Bernardo O’Higgins, supreme Director of Chile, responded to a petition by protestants and gave them the right to buy land for their own burial grounds. In 1825, the land next to the catholic cemetery no. 1 was purchased in the name of the British consul  as a burial ground for the “Dissidentes”. The first recorded burial of Captain William Wilkinson was in 1825. The British, German, French and North American communities financed the operation. Cemeteries remained exclusively catholic until 1887, when they were given civil status.
+<audio src="audio-tour/heritage-tour/cementerio-disidentes.ogg" controls></audio>
+<br>
+Until 1825 non-Catholics were not permitted to be buried in any cemetery and were instead interred on the hillsides or seashore, sometimes even in caves.  However, in 1819 Bernardo O’Higgins, supreme Director of Chile, responded to a petition by protestants and gave them the right to buy land for their own burial grounds. In 1825, the land next to the catholic cemetery no. 1 was purchased in the name of the British consul  as a burial ground for the “Disidentes”. The first recorded burial of Captain William Wilkinson was in 1825. The British, German, French and North American communities financed the operation. Cemeteries remained exclusively catholic until 1887, when they were given civil status.
 <br>
 <br><h1><a style="float: right;" 
 				href="#top" title="Top" >&#9650</a></h1>	
@@ -253,6 +293,8 @@ Cerro Concepción
 <a name="9"></a> 
 <b>9. Ascensor Reina Victoria</b> <a href="https://goo.gl/maps/FUYTQonTgUiv8gme6
 "> (222 106, Av. Elias)</a><br>
+<audio src="audio-tour/heritage-tour/ascensor-reina-victoria.ogg" controls></audio>
+<br>
 Ascensor Reina Victoria goes up from avenida Elias to Paseo Dimalow on Cerro 
 Alegre. On 9th July 1902 the municipality granted a permit to Frederico Page to 
 build a water powered “ascensor” to connect Callejon Elias No. 2 with Paseo Dimalow. It was inaugurated in March 1903 and named after Queen Victoria, who died in 1901. It is 39 metres long and rises 33 metres at an angle of 57 degrees, making it the steepest of all the “ascensors” in the city. Initially it was powered by a water balancing system, but is now electric. It has been said, that the architecture of the ground station, reopened in 1988, is of “a dubious modernist experimental line completely at odds with the characteristics of the area”. (Caceres 2009)
@@ -268,6 +310,8 @@ From Ascensor Reina Victoria go along Paseo Dimalow, walking down Almirante Mont
 <a name="10"></a> 
 <b>10. German college</b> <a href="https://goo.gl/maps/W5uwnMAp87MjWLgi8
 "> (Pilcomayo 591)</a><br>
+<audio src="audio-tour/heritage-tour/german-school.ogg" controls></audio>
+<br>
 In 1857 the German community agreed to the creation of a college  and rented properties in the centre of the city. In 1870 the “Asociación del colegio Alemán” bought a piece of land on Cerro Concepción big enough to build a modern educational establishment. With the establishment of the German empire teachers were sent out from Germany.                                                                         The growth of the college was reflected in its constant enlargement, some of which were made necessary by earthquakes. For more than 100 years, between 1870 and 1985, the German college remained in Cerro Concepción and established itself as a centre of excellence for sport, music and theatre, whose principal purpose was to promote German culture within the German settlers and their descendants.  
 In 2016 it was recognised as a historic monument and was subsequently sold to the businessman Sr. Dib.
 
@@ -282,6 +326,8 @@ In 2016 it was recognised as a historic monument and was subsequently sold to th
 <a name="11"></a> 
 <b>11. Lutheran Church</b> <a href="https://goo.gl/maps/Ki7CGdfdq5SV1onU8
 "> (Abtao 689)</a> <br>
+<audio src="audio-tour/heritage-tour/lutheran-church.ogg" controls></audio>
+<br>
 During the first decades of the 19th century the Anglican Church was the primary meeting place for the neighbourhood where the German and British community lived. Chilean society was mainly catholic and the settlers mainly protestants and for this reason they shared together in the celebration of religious services and pastoral care until the German community was able to establish their own church in 1867. Thirty years later, in 1897 the building of their own church building began with the laying of the foundation stone in the care of the Bliederhauser Brothers firm of Architects.
 <br>
 <br><h1><a style="float: right;" 
@@ -292,6 +338,8 @@ During the first decades of the 19th century the Anglican Church was the primary
 <a name="12"></a> 
 <b>12. St. Paul’s Anglican church</b><a href="https://goo.gl/maps/oxSRrS2cxGPN6KdR6
 "> (Pilcomayo 566)</a> <br>
+<audio src="audio-tour/heritage-tour/st-pauls.ogg" controls></audio>
+<br>
 St. Paul’s was built in 1858 by the British railway engineer William Lloyd and contains a number of notable features. It was named a national monument in 1979 and elevated to the status of cathedral in 2016. During the construction, the government of the time only allowed the construction of the church on understanding that it maintained a low profile. It was not permitted to build a spire nor a  bell tower, or to display an external cross. The principal access should not open on to the street directly only allow access through a side door.
 Inside the beamed  timber roof is of a unique laminated construction only found elsewhere at that time in the arches of the Cristal Palace and Charing Cross station. The timber used is of Oregon pine as in many constructions in Valparaíso. 
 
@@ -308,10 +356,12 @@ Inside the beamed  timber roof is of a unique laminated construction only found 
 <h3>Extra:</h3><br><h5> A few more places of interest.</h5><br>
 <b>The Valparaíso Seamen’s Institute</b> <a href="https://goo.gl/maps/st8eNF5FoTbSAauq6
 "> (Avenida Errázuriz No.216)</a><br>
+<audio src="audio-tour/heritage-tour/seamens-institute.ogg" controls></audio>
+<br>
 If you have time you may like to visit the site of the former Seamen´s mission.<br>
 The Seamen´s mission was established to look after the welfare of the many seamen who passed through Valparaíso. The Mission was originally started by the Rev David Trumbull but eventually passed to The Mission to Seamen of London in 1906.<br>
 The Mission provided excellent facilities in its building where visitors could relax with a magazine or game of cards, play billiards or exercise in the gym. There were evening classes, and concerts, lectures and dances. The Mission chapel provided a place for worship on a Sunday and supported a Chaplain.<br>
-The building has since been sold but can still been visited at Avenida Errázuriz No.216
+The building has since been sold but can still be visited at Avenida Errázuriz No.216
 
 
 
