--- a/art-surg.html
+++ b/art-surg.html
@@ -430,7 +430,14 @@ Divine Service was celebrated under circumstances of great encouragment, for the
 <br>
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-La iniciativa de Rowlandson de mantener un school room en su hogar, que en realidad funcionaba como capilla, tuvo al parecer una buena acogida entre los extranjeros protestantes. Antes de un año, el 21 de octubre de 1838, anotaba en su libro de registros sus apreciaciones sobre la instauración de una nueva “capilla”, más grande que la primera, construida por Edward Loring, un vecino del Cerro Concepción, en una propiedad de Mr. Waddington
+La iniciativa de Rowlandson de mantener un school room en su hogar, que 
+en realidad funcionaba como capilla, tuvo al parecer una buena acogida 
+entre los extranjeros protestantes. Antes de un año, el 21 de octubre 
+de 1838, anotaba en su libro de registros sus apreciaciones sobre la 
+instauración de una nueva “capilla”, más grande que la primera, construida por Edward Loring, un vecino del Cerro Concepción, en una propiedad de Mr. Waddington
+
+
+</span>
 
 
 <div class="clicker" style="color:blue;display: inline;" tabindex="1"><sup>13</sup></div>:
@@ -455,10 +462,7 @@ La iniciativa de Rowlandson de mantener un school room en su hogar, que en reali
 
 <div class="clicker" style="color:blue;display: inline;" tabindex="1"><sup>14</sup></div>
 
-<!--
-<div class="clicker" style="color:blue;display: inline;" tabindex="1"><sup>14</sup></div>
-<div class="hiddendiv" style="position:relative; width:100%;font-family:monospace;">
-	-->
+
 <div class="hiddendiv" style="position:relative; width:100%;font-family:monospace;">
 	<br>
 	
@@ -657,7 +661,7 @@ Monseñor Arzozbispo Santiago.</span><br><br>
 Sr. Ministro de Estado en<br>
 El departamento de Justicia
 
-</i>
+</i></span>
 <div class="clicker" style="color:blue;display: inline;" tabindex="1"><sup>21</sup></div>.
 <div class="hiddendiv" style="position:relative; width:100%;font-family:monospace;">
 	<br>
