--- a/art-surg.html
+++ b/art-surg.html
@@ -740,7 +740,7 @@ En 1842, por su parte, llegó el primer aporte monetario del gobierno británico
 </div> 	
 <br>
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-Sólo 16 años más tarde, el 14 de enero de 1857, la comunidad anglicana  logró adquirir  los terrenos destinados a la construcción de su iglesia, pagando por ellos la suma de $10.000 a Mr. Waddington, quien hacia 1830 había hecho una fortuna respetable en el mundo del comercio y era considerado uno de los hombres más ricos del país, y que vivía " al otro lado del estero de las Delicias", en una casa quinta que sobresalía por su hermosísimo jardín y por tener las características de la "morada de un lord inglés"1. 
+Sólo 16 años más tarde, el 14 de enero de 1857, la comunidad anglicana  logró adquirir  los terrenos destinados a la construcción de su iglesia, pagando por ellos la suma de $10.000 a Mr. Waddington, quien hacia 1830 había hecho una fortuna respetable en el mundo del comercio y era considerado uno de los hombres más ricos del país, y que vivía " al otro lado del estero de las Delicias", en una casa quinta que sobresalía por su hermosísimo jardín y por tener las características de la "morada de un lord inglés". 
 <div class="clicker" style="color:blue;display: inline;" tabindex="1"><sup>27</sup></div>.
 <div class="hiddendiv" style="position:relative; width:100%;font-family:monospace;">
 	<br>
