--- a/art-surg.html
+++ b/art-surg.html
@@ -390,7 +390,7 @@ Del puño del propio John Rowlandson se pueden leer el siguiente testimonio:
 <br>
 <br>
 
- <span style="font-family:serif; font-size:1.2em;">
+ <span style="font-family:serif; ">
 <i>
 “Cerro Alegre
 <br>
@@ -453,7 +453,7 @@ instauración de una nueva “capilla”, más grande que la primera, construida
 
 <br>
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
- <span style="font-family:serif; font-size:1.2em;">
+ <span style="font-family:serif; ">
 <i>
 “Un Servicio Divino fue celebrado en mi nueva capilla, cuyas dimensiones son más del doble de la anterior, por primera vez para el Servicio Matutino de este día. Hubo una gran congregación, entre la cual observé a muchos que no habían asistido con anterioridad”.
 
