--- a/disidentes.html
+++ b/disidentes.html
@@ -171,10 +171,11 @@ src="images/church/154810_IGLESIA_ANGLICANA_(INTERIOR).jpg"></center>
 <br>
 
 
-<div style="float:right; text-align: right; background-color: white; 
+<div style="float:right; text-align: right;">
+	<h5 style="float:right; background-color: white; 
+	opacity: 0.9; z-index:1;">John Marsh</h5>
+	<span style="float:right; background-color: white; 
 	opacity: 0.9; z-index:1;">
-	<h5 style="float:right">John Marsh</h5>
-	<span style="float:right">
 <br><i><h6 style="float:right">Trent University<br>Peterborough<br>Canada</h6>
 <br><h6 style="float:right">March 2008</h6>
 </span></i>
