--- a/quotations.html
+++ b/quotations.html
@@ -153,7 +153,10 @@ instead of numbered?
 
 	
 <center>
-	<img style="max-width:90%; max-height:70%; float:right;" src="images/history/resource-98-map.jpeg">
+	<img style="max-width:90%; max-height:70%; float:right;" src="https://storage.googleapis.com/wzukusers/user-12966490/images/5cc511a82492a1MfJKi9/Cerro-Alegre-map_d1000.JPG">
+	
+	<!--images/history/resource-98-map.jpeg-->
+
 </center>
 
 
