--- a/resource-library.html
+++ b/resource-library.html
@@ -215,7 +215,7 @@ NEOGÓTICO Y MODERNIZACIÓN EN VALPARAÍSO - Michelle Prain Brice</a>
 <br><a href="disidentes.html">A GUIDE TO EL CEMENTERIO DE DISIDENTES
 VALPARAISO, CHILE - John Marsh</a>
 
-<br><a href="quotations.html">Quotations: from Valparaíso In chronological order - John Marsh</a>
+<br><a href="quotations.html">Quotations: from Valparaíso in chronological order - John Marsh</a>
 
 </span>
 	</div>
