--- a/resource-library.html
+++ b/resource-library.html
@@ -180,8 +180,9 @@ display:block;
 
 
 
+	<div class="contain" style="margin-top:36px;">
 
-<div class="contain" style="margin-top:36px;">
+
 
 
 <div style="background-color: white;  opacity: 0.5; z-index:1; position:relative; display:block; padding-bottom:1.1em; height:3px;">
@@ -190,30 +191,29 @@ display:block;
 </h1>
 </div>
 
-<br>
-<div style="background-color: white;  opacity: 0.5; z-index:1; position:relative; display:block;">
 
-<h3 style="float:left; text-align:left; position:absolute; top: 1.2em; left:0; ">
-A collection of documents<br>
-<sup>On the history of immigrants in Valparaíso, Chile</sup></h3>
+<div style="background-color: white;  opacity: 0.5; z-index:1; position:relative; display:inline-block; width:100%;">
+
+<h3 style="float:left; text-align:left; position:absolute; top:0px; left:0; ">
+A collection of writings<br>
+<sup>on immigrant history in Valparaíso, Chile</sup></h3>
 
 
 
 </div>
 	<br><!--dda006 color:#b28105-->
 	
-	
-<
+
 <div class="example" style="height:100%; float:left; position:fixed; left:3px; word-break: break-all; overflow:scroll; text-align:left; top:25%;" >
 <span style="background-color: white; 
 	opacity: 0.8; z-index:1; font-size:1.1em; ">
 
 <a href="art-surg.html">Surgimiento de la Iglesia Anglicana Saint Paul´s de Valparaíso en el contexto del siglo XIX - Michelle Prain Brice
 </a>
-<br><a href="wh-lloyd.html">EL LEGADO DE WILLIAM HENRY LLOYD
-NEOGÓTICO Y MODERNIZACIÓN EN VALPARAÍSO - Michelle Prain Brice</a>
-<br><a href="disidentes.html">A GUIDE TO EL CEMENTERIO DE DISIDENTES
-VALPARAISO, CHILE - John Marsh</a>
+<br><a href="wh-lloyd.html">
+	El Legado de William Henry Lloyd Neogótico y Modernización en Valparaíso - Michelle Prain Brice</a>
+<br><a href="disidentes.html">A guide to El Cementerio de Disidentes
+Valparaíso, Chile - John Marsh</a>
 
 <br><a href="quotations.html">Quotations: from Valparaíso in chronological order - John Marsh</a>
 
