--- a/resource-library.html
+++ b/resource-library.html
@@ -187,7 +187,7 @@ display:block;
 
 <div style="background-color: white;  opacity: 0.5; z-index:1; position:relative; display:block; padding-bottom:1.1em; height:3px;">
 
-<h1 style="position:absolute; top:0px; right:0px; float:right; text-align:right; max-width:70%; position:fixed; " >Resource Library
+<h1 style="position:absolute; top:0px; right:0px; float:right; text-align:right; width:100%; position:fixed; background-color:silver; display:block;" >Resource Library
 </h1>
 </div>
 
@@ -297,5 +297,6 @@ background-color: white;
 	<!--<h3 ><a title="Volver" 
 href="index.html#1">&#9664 Tabla de contenido</a></h3>
 -->
+
 
 		
