new resource library

--- a/resource-library.html
+++ b/resource-library.html
@@ -164,6 +164,25 @@ display:none;
 display:block;
 }
 
+
+
+
+
+
+
+
+a
+{
+	color:gray;
+	}
+
+a:hover {
+	color:black; /* brown */
+		background-color:silver;
+			filter: drop-shadow(0 0 0.75rem white);
+
+	}
+
 </style>
 
 <body>
@@ -208,14 +227,13 @@ A collection of writings<br>
 <span style="background-color: white; 
 	opacity: 0.8; z-index:1; font-size:1.1em; ">
 
-<a href="art-surg.html">Surgimiento de la Iglesia Anglicana Saint Paul´s de Valparaíso en el contexto del siglo XIX - Michelle Prain Brice
-</a>
-<br><a href="wh-lloyd.html">
-	El Legado de William Henry Lloyd Neogótico y Modernización en Valparaíso - Michelle Prain Brice</a>
-<br><a href="disidentes.html">A guide to El Cementerio de Disidentes
-Valparaíso, Chile - John Marsh</a>
+<a href="art-surg.html">Surgimiento de la Iglesia Anglicana Saint Paul´s de Valparaíso en el contexto del siglo XIX - Michelle Prain Brice</a><br>
+<a href="wh-lloyd.html">
+	El Legado de William Henry Lloyd Neogótico y Modernización en Valparaíso - Michelle Prain Brice</a><br>
+<a href="disidentes.html">A guide to El Cementerio de Disidentes
+Valparaíso, Chile - John Marsh</a><br>
 
-<br><a href="quotations.html">Quotations: from Valparaíso in chronological order - John Marsh</a>
+<a href="quotations.html">Quotations: from Valparaíso in chronological order - John Marsh</a>
 
 </span>
 	</div>
@@ -298,5 +316,3 @@ background-color: white;
 href="index.html#1">&#9664 Tabla de contenido</a></h3>
 -->
 
-
-		
