--- a/resource-library.html
+++ b/resource-library.html
@@ -179,8 +179,8 @@ a
 a:hover {
 	color:black; /* brown */
 		background-color:silver;
-			filter: drop-shadow(0 0 0.75rem white);
-
+			/*filter: drop-shadow(0 0 0.75rem white);
+*/
 	}
 
 </style>
