--- a/resource-library.html
+++ b/resource-library.html
@@ -90,7 +90,7 @@
   height: 1060px;
    position:fixed;
    left:0px;
-  background-image: url(https://storage.googleapis.com/wzukusers/user-12966490/images/55c159971efebfRkBtl0/17_1000.jpg) ;
+  background-image: url(images/jmarsh/17_1000_vista-a-la-cordillera-desde-cerro-alegre.jpg) ;
   background-size: 110% 110%;
   background-repeat: repeat;
  /* background-size: cover;
