update disidentes.html images

--- a/disidentes.html
+++ b/disidentes.html
@@ -139,7 +139,8 @@ src="images/church/154810_IGLESIA_ANGLICANA_(INTERIOR).jpg"></center>
 
 	
 <center>
-	<img style="width:100%; height:100%; max-width:90%; max-height:80%; float:right;" src="https://storage.googleapis.com/wzukusers/user-12966490/images/5839c0fe3344dyQGc6xn/IMG_0185_d600.JPG
+	<img style="width:100%; height:100%; max-width:90%; max-height:80%; 
+	float:right;" src="images/jmarsh/IMG_0185_d600-disidentes-1.jpg
 ">
 </center>
 <br>
@@ -330,7 +331,7 @@ Many appear on the gravestones in El Cementerio de Disidentes in Valparaiso.
 
 
 
-<center><img style="width:100%; z-index:2" src="https://storage.googleapis.com/wzukusers/user-12966490/images/583a4b195a3b0uzcPX7k/IMG_0187_d600.JPG"><br>
+<center><img style="width:100%; z-index:2" src="images/jmarsh/IMG_0187_d600-disidentes-2.jpg"><br>
 <span style="font-family:serif; font-size: 1 em;">
 </center>	
 </span>
