--- a/quotations.html
+++ b/quotations.html
@@ -153,7 +153,7 @@ instead of numbered?
 
 	
 <center>
-	<img style="max-width:90%; max-height:70%; float:right;" src="https://storage.googleapis.com/wzukusers/user-12966490/images/5cc511a82492a1MfJKi9/Cerro-Alegre-map_d1000.JPG">
+	<img style="max-width:90%; max-height:70%; float:right;" src="images/jmarsh/17_1000_vista-a-la-cordillera-desde-cerro-alegre.jpg">
 	
 	<!--images/history/resource-98-map.jpeg-->
 
