update quotations.html image-link

--- a/quotations.html
+++ b/quotations.html
@@ -153,7 +153,7 @@ instead of numbered?
 
 	
 <center>
-	<img style="max-width:90%; max-height:70%; float:right;" src="images/jmarsh/17_1000_vista-a-la-cordillera-desde-cerro-alegre.jpg">
+	<img style="max-width:90%; max-height:70%; float:right;" src="images/jmarsh/Cerro-Alegre-map_d1000.JPG">
 	
 	<!--images/history/resource-98-map.jpeg-->
 
