--- a/wh-lloyd.html
+++ b/wh-lloyd.html
@@ -96,11 +96,16 @@ src="images/church/154810_IGLESIA_ANGLICANA_(INTERIOR).jpg"></center>
 
 <div class="contain">
 	
-<div id="outer">  
-	<a href="https://www.academia.edu/29760560/El_Neog%C3%B3tico_en_la_Arquitectura_Americana">
+<div id="outer">
+	<i><a href="https://www.academia.edu/29760560/El_Neog%C3%B3tico_en_la_Arquitectura_Americana">
 El Neo Gotico en la Arquitectura Americana. Historia, Restauración, Reinterpretaciones y Reflexiones</a> <!--Martin Checa-Artasu, Olimpia Niglio (editores)-->
-
-
+<br><i>
+Martin Checa-Artasu, Olimpia Niglio (editores)</i>
+<br>
+ERMES EDIZIONI SCIENTIFICHE
+<br>
+Roma, Italia</i>
+</font>  
     <div id="inner">
 
 
