--- a/index.html
+++ b/index.html
@@ -46,8 +46,11 @@ historical-information.html">Historical Information</a>
 	<br><br>
 <a href="vitrales.html">Vitrales</a>
 
-<br><br>
-<!--<a href="organ.html">Queen Victoria Memorial Organ</a>
+<br><br><!--
+<a href="organ.html">Queen Victoria Memorial Organ</a>
+<br>
+<br>
+<a href="resource-library.html">Resource Library</a>
 <br>
 <br>-->
 <a href="heritagetour.html">Heritage Tour</a>
@@ -60,7 +63,7 @@ https://www.tripadvisor.com.ph/Attraction_Review-g294306-d8698420-Reviews-Catedr
 
 <br>
 <br>
-<a href="http://saintpaulchile.cl">SaintPaulChile.CL</a>
+<a href="http://saintpaulchile.cl">SaintPaulChile.cl</a>
 <br>
 <br>
 <br>
