--- a/resource-library.html
+++ b/resource-library.html
@@ -233,7 +233,9 @@ A collection of writings<br>
 <a href="disidentes.html">A guide to El Cementerio de Disidentes
 Valparaíso, Chile - John Marsh</a><br>
 
-<a href="quotations.html">Quotations: from Valparaíso in chronological order - John Marsh</a>
+<a href="quotations.html">Quotations: from Valparaíso in chronological order - John Marsh</a><br>
+
+<a href="lloyd-railway.html">A Railway Pioneer. Notes by a Civil Engineer in Europe and America from 1838 to 1888. - W.H. Lloyd</a>
 
 </span>
 	</div>
