--- a/disidentes.html
+++ b/disidentes.html
@@ -13,8 +13,8 @@
 		<title>Cemetery Guide
 </title>
 		<!-- code from https://gist.github.com/pgr86/2420594 -->
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-		</head>
+	<!--	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+		--></head>
 		
 		
 		<style>
@@ -77,6 +77,22 @@
         height: auto !important;
     }
 }
+
+
+a
+{
+	color:gray;
+	}
+
+a:hover {
+	color:black; /* brown */
+		background-color:silver;
+			/*filter: drop-shadow(0 0 0.75rem white);
+*/
+	}
+
+
+
 		</style>
 		
 
@@ -114,23 +130,22 @@ src="images/church/154810_IGLESIA_ANGLICANA_(INTERIOR).jpg"></center>
 <span style="background-color: white; 
 	opacity: 0.8; z-index:1; ">
 <a href="#1"><!--Chile, Valparaiso and Britain -->...in the Nineteenth Century</a><br>
-<a href="#2">Why a Separate Cemetery?</a>
-<br><a href="#3">Cemetery Architecture</a>
-<br><a href="#4">Earliest Burials</a>
-<br><a href="#5">Dieing Young, Dieing Old</a>
-<br><a href="#6">The Mariners</a>
-<br><a href="#7">Shipping Companies</a>
-<br><a href="#8">Businesses</a>
-<br><a href="#9">Professions</a>
-<br><a href="#10">Church and Missionaries</a>
-<br><a href="#11">Communications</a>
-<br><a href="#12">The Scots</a>
-<br><a href="#13">The Cornish</a>
-<br><a href="#14">The Liverpool Connection</a>
-<br><a href="#15">Accidental Deaths</a>
-<br><a href="#16">War Deaths</a>
-<br><a href="#17"><!--The British--> ...in Valparaiso Today</a>
-
+<a href="#2">Why a Separate Cemetery?</a><br>
+<a href="#3">Cemetery Architecture</a><br>
+<a href="#4">Earliest Burials</a><br>
+<a href="#5">Dieing Young, Dieing Old</a><br>
+<a href="#6">The Mariners</a><br>
+<a href="#7">Shipping Companies</a><br>
+<a href="#8">Businesses</a><br>
+<a href="#9">Professions</a><br>
+<a href="#10">Church and Missionaries</a><br>
+<a href="#11">Communications</a><br>
+<a href="#12">The Scots</a><br>
+<a href="#13">The Cornish</a><br>
+<a href="#14">The Liverpool Connection</a><br>
+<a href="#15">Accidental Deaths</a><br>
+<a href="#16">War Deaths</a><br>
+<a href="#17"><!--The British--> ...in Valparaiso Today</a><br>
 </span>
 	</div>
 
@@ -147,7 +162,7 @@ src="images/church/154810_IGLESIA_ANGLICANA_(INTERIOR).jpg"></center>
 
 <div style="background-color: white; 
 	opacity: 0.5; z-index:1;">
-<h3 style="position:absolute; top:0px; right:0px; float:left; text-align:right; max-width:70%; " >A GUIDE TO EL CEMENTERIO DE DISIDENTES<br> VALPARAISO, CHILE</h3>
+<h3 style="position:absolute; top:0px; right:33px; float:left; text-align:right; max-width:70%; " >A GUIDE to EL CEMENTERIO de DISIDENTES<br> VALPARAISO, CHILE</h3>
 </div>
 	<br><!--dda006 color:#b28105-->
 	
