--- a/resource-library.html
+++ b/resource-library.html
@@ -13,8 +13,8 @@
 		<title>Resource Library
 </title>
 		<!-- code from https://gist.github.com/pgr86/2420594 -->
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
-		</head>
+	<!--	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+		--></head>
 		
 
 		<style>
